build: correct word-wrapping

--- a/assets/main.css
+++ b/assets/main.css
@@ -13,3 +13,7 @@ article {
   max-width: 700px;
   margin: 0 auto;
 }
+
+.v-card__title {
+  word-break: break-word;
+}
